Fixes #744 - Fix overlapping filters when side navigation is expanded

--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -192,12 +192,25 @@ a[title="Back"] {
   padding: 0 1em 0.5em;
 
   .filter {
-    @include flex(0 0 20%);
-    padding: $col-padd;
+    @include flex(0 0 16%);
+    // display: inline-block;
+    // vertical-align: top;
+    // width: 18%;
+    margin: 0 2%;
+    // padding: $col-padd 25px $col-padd;
 
     > label {
       min-height: auto;
       line-height: 15px;
+    }
+
+    > input {
+      height: 36px;
+    }
+    .select.input-large,
+    .Select.is-searchable,
+    .LocationSelect {
+      width: 100%;
     }
   }
 
